handles the UI freeze and the added catching

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -38,30 +38,27 @@
                              ========================= -->
                         <!-- Row 1: Title, Author -->
                         <div class="row mb-3">
-                            <div class="col-md-6 mb-3">
+                            <div>
                                 <label for="title" class="form-label">Title</label>
                                 <input type="text" id="title" class="form-control" required
                                     placeholder="Enter book title">
                                 <div class="invalid-feedback">Please Enter Title</div>
                             </div>
-                            <div class="col-md-6 mb-3">
-                                <label for="Author" class="form-label">Author</label>
-                                <input id="Author" type="text" class="form-control" required
-                                    placeholder="Enter author name">
-                                <div class="invalid-feedback">Please Enter Author</div>
-                            </div>
+
                         </div>
 
 
 
                         <!-- Row 3: for, Location, Lang Code -->
                         <div class="row mb-3">
-
                             <div class="col-md-6 mb-6">
-                                <label for="location" class="form-label">Location</label>
-                                <input id="location" class="form-control" required placeholder="Shelf/Rack location">
-                                <div class="invalid-feedback">Please Enter Location</div>
+                                <label for="Author" class="form-label">Author</label>
+                                <input id="Author" type="text" class="form-control" required
+                                    placeholder="Enter author name">
+                                <div class="invalid-feedback">Please Enter Author</div>
                             </div>
+
+
                             <div class="col-md-6 mb-6">
                                 <label for="publisher" class="form-label">Publisher</label>
                                 <input id="publisher" class="form-control" required placeholder="Publisher">
@@ -77,20 +74,15 @@
                              ========================= -->
                         <!-- Row 4: Accession, Copies, Bill No -->
                         <div class="row mb-3">
-                            <div class="col-md-4 mb-3">
+                            <div class="col-md-6 mb-6">
                                 <label for="Accession_number" class="form-label">Accession Number</label>
                                 <input id="Accession_number" type="number" class="form-control" required
                                     placeholder="Enter Accession Number">
                                 <div class="invalid-feedback">Please Enter Accession Number</div>
                             </div>
 
-                            <div class="col-md-4 mb-3">
-                                <label for="bill-no" class="form-label">Bill No: </label>
-                                <input type="number" min="1" id="bill-no" class="form-control" required
-                                    placeholder="Enter Bill No">
-                                <div class="invalid-feedback">Please Enter Bill No</div>
-                            </div>
-                            <div class="col-md-4 mb-3">
+
+                            <div class="col-md-6 mb-6">
                                 <label for="cost" class="form-label">Cost In Rupees (Rs): </label>
                                 <input type="number" min="1" id="cost" class="form-control" required
                                     placeholder="Enter Cost">
@@ -147,7 +139,6 @@
         <p class=" mb-0 ">Developed And Maintained By CO 2023</p>
     </footer>
     <script src="../Assets/js/index.js"></script>
-    <script src="../Assets/js/validation.js"></script>
 </body>
 
 
